# leave_management

./: README.md
backend/: auth.py  database.py  main.py  models.py  permissons.py  pyproject.toml
backend/routes/: auth_routes.py  leave_routes.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/components/auth/: AuthForm.vue
frontend/src/components/dashboard/: LeaveRequestForm.vue  LeaveTable.vue
frontend/src/components/ui/calendar/: Calendar.vue
frontend/src/components/ui/select/: SelectTrigger.vue
frontend/src/lib/: api.ts
frontend/src/router/: index.ts
frontend/src/views/: Dashboard.vue  Login.vue  NotFound.vue
